Fixed broken css custom properties (from refactoring in IntelliJ)

--- a/src/main/java/edu/stanford/bmir/protege/web/resources/WebProtege.css
+++ b/src/main/java/edu/stanford/bmir/protege/web/resources/WebProtege.css
@@ -195,7 +195,7 @@
 }
 
 .portletToolbar {
-    background: literal("var(--viewToolbarBackground)");
+    background: literal("var(--viewToolbar-background-color)");
 }
 
 .inTrash {
