--- a/src/main/java/edu/stanford/bmir/protege/web/resources/WebProtegeDialog.css
+++ b/src/main/java/edu/stanford/bmir/protege/web/resources/WebProtegeDialog.css
@@ -90,7 +90,7 @@
 }
 
 .dialog .errorLabel {
-    color: literal("var(--errorLabelColor)");
+    color: literal("var(--errorLabel-color)");
     display: none;
     padding: 0;
 }
